@@ -5,6 +5,7 @@ Version 3.0 (X X, 2017) - ""
 Correct SP0256 speech for IDSA games (needs additional sp0256-al2.bin file to work (for Basketball and V-1, only the latter features speech though))
 Fixed reset / NMI handling for IDSA V-1
 Fix Stern SB300 noise generator regression (and slightly improve sound over older implementation, but still not accurate)
+Fix Rescue 911 DMD brightness level mapping regression
 
 *** ROM SUPPORT *** Thanks to ipdb.org, Effect, Juan
 New:
